Fix overflowing pre elements

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,4 +6,5 @@ pre {
   background-color: lightgrey;
   border-radius: 5px;
   padding: 10px;
+  overflow-x: scroll;
 }
